--- 1.0.0 2007/06/20

First public release.
