@@ -1,0 +1,4 @@
+Alias /pazpar2-jsdemo /usr/share/pazpar2-jsdemo/
+
+ProxyPass /pazpar2-jsdemo/search.pz2 http://localhost:8004/search.pz2
+
