@@ -46,6 +46,17 @@ Description: Pazpar2 portal test1
  model-independent metasearching middleware featuring merging, relevance
  ranking, record sorting, and faceted results.
  .
- This is a simple metasearch interface using Pazpar2 that us using
+ This is a simple metasearch interface using Pazpar2 that is using
  Apache2 as frontend HTTP server. When installed, this service is
  available at http://host/pazpar2-test1/ .
+
+Package: pazpar2-jsdemo
+Architecture: all
+Depends: pazpar2, pazpar2-apache2
+Description: Pazpar2 demo using the pz2.js library
+ Pazpar2 is a high-performance, user interface-independent, data
+ model-independent metasearching middleware featuring merging, relevance
+ ranking, record sorting, and faceted results.
+ .
+ This is a metasearch interface using Pazpar2 JavaScript library pz2.js
+ library. Is available at http://host/pazpar2-jsdemo/ .
