@@ -1,0 +1,2 @@
+etc/apache2/conf.d
+usr/share/pazpar2-jsdemo
