@@ -75,14 +75,21 @@ binary-arch: build install
 	dh_testdir
 	dh_testroot
 	dh_installchangelogs NEWS
+	# pazpar2-doc package
 	mv $(CURDIR)/debian/pazpar2/usr/share/doc/pazpar2/* $(CURDIR)/debian/pazpar2-doc/usr/share/doc/pazpar2-doc
+	# pazpar2-apache2 package
 	cp $(CURDIR)/debian/pazpar2.cfg $(CURDIR)/debian/pazpar2/etc/pazpar2/
 	cp etc/*.xml $(CURDIR)/debian/pazpar2/etc/pazpar2/settings/
 	cp etc/*.xsl $(CURDIR)/debian/pazpar2/etc/pazpar2/
 	cp $(CURDIR)/debian/ap2pazpar2.cfg $(CURDIR)/debian/pazpar2-apache2/etc/apache2/conf.d
+	# pazpar2-test1 package
 	cp www/test1/index.html $(CURDIR)/debian/pazpar2-test1/usr/share/pazpar2-test1/
 	cp www/test1/search.js $(CURDIR)/debian/pazpar2-test1/usr/share/pazpar2-test1/
 	cp $(CURDIR)/debian/ap2test1.cfg $(CURDIR)/debian/pazpar2-test1/etc/apache2/conf.d
+	# pazpar2-jsdemo package
+	cp www/jsdemo/*.html $(CURDIR)/debian/pazpar2-jsdemo/usr/share/pazpar2-jsdemo/
+	cp www/jsdemo/*.js $(CURDIR)/debian/pazpar2-jsdemo/usr/share/pazpar2-jsdemo/
+	cp $(CURDIR)/debian/ap2jsdemo.cfg $(CURDIR)/debian/pazpar2-jsdemo/etc/apache2/conf.d
 	dh_installchangelogs NEWS
 	dh_installdocs
 	dh_installexamples
