@@ -1,3 +1,7 @@
+
+jsdemo included in distribution. It illustrates the use of the js/pz2.js
+JavaScript library.
+
 --- 1.0.0 2007/06/20
 
 First public release.
